Bug 1798166 - Fix color contrast to be compliant with WCAG AA 2.0 (#159)

--- a/skins/contrib/Dusk/bug.css
+++ b/skins/contrib/Dusk/bug.css
@@ -6,10 +6,6 @@
  * defined by the Mozilla Public License, v. 2.0.
  */
 
-tr.bz_bugitem:hover {
-    background-color: #ccccff;
-}
-
-.bz_sort_order_secondary {
-  color: #555;
+.bz_short_desc_container {
+  background-color: #e0e0e0;
 }
